Fix the overflowing of long text

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ p {
 
     .main-article {
         margin-top: 2rem;
+        word-break: break-word;
     }
 
     .main-article h2,
